# cpp_physics

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile  README.md  README_8md.html  annotated.html  c_physics_engine.code-workspace  classcpp__physics_1_1Matrix-members.html  classcpp__physics_1_1Matrix.html  classes.html  cpp-physics_8hpp.html  cpp-physics_8hpp_source.html  dir_67dde02b5d06f5d70132e7fd200560be.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  dir_d7e40aee65d4ef6e7d1bf461b6ed3ef0.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_vars.html  index.html  math_8cpp.html  math_8hpp.html  math_8hpp_source.html  matrix_8cpp.html  matrix_8hpp.html  matrix_8hpp_source.html  menudata.js  namespacecpp__physics.html  namespacecpp__physics_1_1math.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html
.github/workflows/: clang-format.yml  cmake.yml  doxygen.yml
search/: all_0.js  all_1.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_0.js  files_0.js  files_1.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
src/demo/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  cpp-physics.hpp
src/lib/math/: math.cpp  math.hpp
src/lib/matrix/: matrix.cpp  matrix.hpp
src/test/: CMakeLists.txt  main.cpp  matrix_test.cpp  test_install.cpp  test_install.sh
